# stampDB

./: ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  DEV_CONTRACT.md  KNOWLEDGEBASE.md  RAM_BUDGET.md  SPEC.md  know.md  out.csv  readme.md  test.py  test1.py
include/: stampdb.h
platform/pico/: CMakeLists.txt  main.c  platform_pico.c
py/: stampdb.py  stampdb_serial.py
sim/: flash.c  platform_sim.c
src/: codec.c  crc32c.c  format.h  meta_lfs.c  read_iter.c  recovery.c  ring.c  stampdb.c  stampdb_internal.h
tests/: CMakeLists.txt  tests_basic.c  tests_codec.c  tests_crc_isolation.c  tests_exporter.c  tests_gc_latency.c  tests_powercut_matrix.c  tests_recovery.c  tests_recovery_time.c
tools/: stampctl.c  stampp.py
